# ldpc

./: .gitignore  Cargo.toml  mac-kay_full-rank.json  readme.md
.github/workflows/: rust.yml
report/: color-report.cls  grodino.sty  main.tex
report/content/: gallager.tex  mackay.tex  setting.tex
report/figures/: gallager_rate-0.5.pgf  gallager_rate-0.67.pgf  mac-kay_full-rank_rate-0.5.pgf  mac-kay_full-rank_rate-0.67.pgf  mac-kay_rate-0.5.pgf  mac-kay_rate-0.67.pgf  mac-kay_regular_rate-0.5.pgf  mac-kay_regular_rate-0.67.pgf
scripts/: experiments.py
scripts/results/: gallager.json  mac-kay-regular.json  mac-kay.json  mac-kay_regular.json
src/: channel.rs  coding.rs  decoding.rs  experiments.rs  main.rs  utils.rs
